[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemies/viper.png" type="Texture" id=1]
[ext_resource path="res://enemies/viper.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.000611246, 0.787206 ), 0.0, 0.0, 0, 0, Vector2( 0.25, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.306788 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 35 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 400.0
height = 300.0

[node name="Viper" type="RigidBody2D" groups=[
"enemies",
]]
collision_layer = 128
collision_mask = 149
gravity_scale = 0.1
linear_damp = 2.0
angular_damp = 2.0
script = ExtResource( 2 )

[node name="ParticlesL" type="CPUParticles2D" parent="."]
position = Vector2( -14, 20.4964 )
emitting = false
amount = 5
lifetime = 0.5
direction = Vector2( 0, 1 )
spread = 10.0
initial_velocity = 100.0
linear_accel = -200.0
scale_amount = 8.0
scale_amount_curve = SubResource( 1 )

[node name="ParticlesR" type="CPUParticles2D" parent="."]
position = Vector2( 14, 20.4964 )
emitting = false
amount = 5
lifetime = 0.5
direction = Vector2( 0, 1 )
spread = 10.0
initial_velocity = 100.0
linear_accel = -200.0
scale_amount = 8.0
scale_amount_curve = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="NavigationRayR" type="RayCast2D" parent="."]
visible = false
position = Vector2( 40, 34 )
enabled = true
cast_to = Vector2( 0, -250 )
collision_mask = 132

[node name="NavigationRayL" type="RayCast2D" parent="."]
visible = false
position = Vector2( -40, 34 )
enabled = true
cast_to = Vector2( 0, -250 )
collision_mask = 132

[node name="NavigationRayB" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 21

[node name="NavigationRayF" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, -500 )
collision_mask = 21

[node name="ShootCooldown" type="Timer" parent="."]

[node name="Sight" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0

[node name="Around" type="CollisionShape2D" parent="Sight"]
position = Vector2( 0, -400 )
shape = SubResource( 3 )
